--- a/credencegoodsBJS/RoleAssignment.html
+++ b/credencegoodsBJS/RoleAssignment.html
@@ -7,7 +7,7 @@ Role Assignment
     <div class="card-body">
         <h4 class="card-title">Your Role</h4>
         <p class="card-text">
-            You are <strong>Player {{ player_role }}</strong> ({{ player_id }}).
+            You are <strong>Player {{ player_role }}</strong>.
         </p>
         <p class="card-text">
             Your role will remain the same throughout the experiment.
