RandomMatching within matching groups, 4 rounds 1 macthing group tested

--- a/credencegoodsBJS/Welcome.html
+++ b/credencegoodsBJS/Welcome.html
@@ -7,7 +7,7 @@ Welcome
     <div class="card-body">
         <h4 class="card-title">Welcome to the experiment!</h4>
         <p class="card-text">
-            Please read the instructions carefully and click "Ready" when you are ready to proceed.
+            Please read the instructions carefully and click "Next" when you are ready to proceed.
         </p>
         {{ next_button }}
     </div>
