--- a/credencegoodsBJS/RoleAssignment.html
+++ b/credencegoodsBJS/RoleAssignment.html
@@ -1,16 +1,16 @@
 {{ block title }}
-Role Assignment
+Attribution des rôles
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Your Role</h4>
+        <h4 class="card-title">Votre rôle</h4>
         <p class="card-text">
-            You are <strong>Player {{ player_role }}</strong>.
+            Vous êtes un <strong>Joueur {{ player_role }}</strong>.
         </p>
         <p class="card-text">
-            Your role will remain the same throughout the experiment.
+            Votre rôle restera le même tout au long de l'expérience.
         </p>
         {{ next_button }}
     </div>
