--- a/credencegoodsBJS/WaitForAllPlayers.html
+++ b/credencegoodsBJS/WaitForAllPlayers.html
@@ -1,15 +1,15 @@
 {{ block title }}
-Waiting
+En attente
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
         <p class="card-text">
-            Please wait while all players join the experiment...
+            Merci de patienter jusqu'à ce que tous les participants nous aient rejoint...
         </p>
         <p class="card-text text-muted">
-            Once all participants are ready, roles will be assigned and the experiment will begin.
+            Une fois que tous les participants seront prêts, les rôles seront attribués et l'expérience pourra commencer.
         </p>
     </div>
 </div>
