--- a/credencegoodsBJS/WaitForInteraction.html
+++ b/credencegoodsBJS/WaitForInteraction.html
@@ -1,12 +1,12 @@
 {{ block title }}
-Waiting
+En attente
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
         <p class="card-text">
-            Please wait while Player B makes their decision...
+            Merci de patienter pendant que le Joueur B fait son choix.
         </p>
     </div>
 </div>
