--- a/credencegoodsBJS/WaitForPricePayment.html
+++ b/credencegoodsBJS/WaitForPricePayment.html
@@ -1,12 +1,12 @@
 {{ block title }}
-Waiting
+En attente
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
         <p class="card-text">
-            Please wait while Player A chooses which price to pay...
+           Merci de patienter le temps que le Joueur A choisisse quel prix il souhaite payer…
         </p>
     </div>
 </div>
