--- a/credencegoodsBJS/Welcome.html
+++ b/credencegoodsBJS/Welcome.html
@@ -1,16 +1,18 @@
 {{ block title }}
-Welcome
+Bienvenue
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Welcome to the experiment!</h4>
+        <h4 class="card-title">Bienvenue dans cette expérimentation!</h4>
         <p class="card-text">
-            Please read the instructions carefully and click "Next" when you are ready to proceed.
+            Merci de lire attentivement les instructions et de cliquer sur "Next" quand vous serez prêt à commencer.
         </p>
         {{ next_button }}
     </div>
 </div>
 {{ endblock }}
+
+
 
