--- a/credencegoodsBJS/InteractionDecision.html
+++ b/credencegoodsBJS/InteractionDecision.html
@@ -1,27 +1,29 @@
 {{ block title }}
-Round {{ player.round_number }}: Interaction Decision
+Tour {{ player.round_number }}: Choix de l'interaction
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Decision to Interact</h4>
+        <h4 class="card-title">Choix de l'interaction</h4>
         <p class="card-text">
-            Player A has offered you:
+            Le joueur A vous offre :
         </p>
         <ul>
-            <li><strong>Price 1:</strong> {{ price1 }} points</li>
-            <li><strong>Price 2:</strong> {{ price2 }} points</li>
+            <li><strong>Prix 1:</strong> {{ price1 }} points</li>
+            <li><strong>Prix 2:</strong> {{ price2 }} points</li>
         </ul>
         <p class="card-text">
-            Do you want to interact with Player A?
+            Souhaitez-vous interagir avec le Joueur A ?
         </p>
         <p class="card-text text-muted">
-            If you choose not to interact, both you and Player A will receive {{ C.OUTSIDE_OPTION }} point for this round.
+            Si vous choisissez de ne pas interagir, vous et le Joueur A recevrez {{ C.OUTSIDE_OPTION }} point pour ce tour.
         </p>
         {{ formfields }}
         {{ next_button }}
     </div>
 </div>
 {{ endblock }}
+
+
 
