--- a/credencegoodsBJS/PriceOffer.html
+++ b/credencegoodsBJS/PriceOffer.html
@@ -1,21 +1,23 @@
 {{ block title }}
-Round {{ player.round_number }}: Price Offer
+Tour {{ player.round_number }}: Offre de prix
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Set Prices</h4>
+        <h4 class="card-title">Définissez des prix</h4>
         <p class="card-text">
-            You are Player A. Please set two prices to offer to Player B.
+            Vous êtes un Joueur A. Veuillez définir deux prix à offrir au Joueur B.
         </p>
         <p class="card-text">
-            Both prices must be integers between {{ C.MIN_PRICE }} and {{ C.MAX_PRICE }} points.
-            Price 1 must be less than or equal to Price 2.
+            Les deux prix doivent être des nombres entiers compris entre {{ C.MIN_PRICE }} et {{ C.MAX_PRICE }} points.
+            Le Prix 1 doit être plus petit ou égal au Prix 2.
         </p>
         {{ formfields }}
         {{ next_button }}
     </div>
 </div>
 {{ endblock }}
+
+        
 
