--- a/credencegoodsBJS/PricePayment.html
+++ b/credencegoodsBJS/PricePayment.html
@@ -1,16 +1,16 @@
 {{ block title }}
-Round {{ player.round_number }}: Choose Price to Pay
+Tour {{ player.round_number }}: Choisir le prix à payer
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
         <p class="card-text">
-            You offered the following prices to Player B:
+            Vous avez offert les prix suivants au Joueur B :
         </p>
         <ul class="mb-3">
-            <li><strong>Price 1:</strong> {{ price1 }} points</li>
-            <li><strong>Price 2:</strong> {{ price2 }} points</li>
+            <li><strong>Prix 1:</strong> {{ price1 }} points</li>
+            <li><strong>Prix 2:</strong> {{ price2 }} points</li>
         </ul>
         <div class="mb-3">
             {{ form.price_paid.label }}
