--- a/credencegoodsBJS/WaitForAction.html
+++ b/credencegoodsBJS/WaitForAction.html
@@ -1,12 +1,12 @@
 {{ block title }}
-Waiting
+En attente
 {{ endblock }}
 
 {{ block content }}
 <div class="card">
     <div class="card-body">
         <p class="card-text">
-            Please wait while Player A chooses an action...
+           Merci de patienter pendant que le Joueur A choisit son action... 
         </p>
     </div>
 </div>
