--- a/credencegoodsBJS/ActionChoice.html
+++ b/credencegoodsBJS/ActionChoice.html
@@ -1,35 +1,34 @@
-{{ block title }}
-Tour {{ player.round_number }}: Choisir votre action
-{{ endblock }}
+{% extends "global/Page.html" %}
 
-{{ block content }}
+{% block title %}Tour {{ player.round_number }} : Choisissez une action{% endblock %}
+
+{% block content %}
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Choisissez votre action</h4>
+        <h4 class="card-title">Choisissez une action</h4>
         <p class="card-text">
-            Le Joueur B a choisi d'interagir avec vous.
-        </p>
-        <p class="card-text">
-            <strong>Le Joueur B est de Type {{ player_b_type }}.</strong>
+            <strong>Le joueur B est du Type {{ player_b_type }}</strong>.
         </p>
         <div class="alert alert-info">
-            <strong>Information sur les revenus :</strong>
+            <strong>Infromation sur les revenues :</strong>
             <ul>
                 <li>Si le Joueur B est de Type 1 et que vous choisissez l'Action 1: Revenu = {{ C.REVENUE_1 }} points</li>
                 <li>Si le Joueur B est de Type 1 et que vous choisissez l'Action 2: Revenu =  {{ C.REVENUE_2 }} points</li>
-                <li>Si le joueur B est de Type 2 : Revenu = {{ C.REVENUE_2 }} points (quelle que soit l'Action choisie)</li>
+                <li>Si le Joueur B est de Type 2 et que vous choisissez l'Action 1 ou l'Action 2: Revenu =  {{ C.REVENUE_2 }} points</li>
             </ul>
-            <strong>Coût de l'Action :</strong>
+            <strong>Coût des actions :</strong>
             <ul>
-                <li>Action 1: Coût  = {{ C.ACTION_1_COST }} point</li>
-                <li>Action 2: Coût  = {{ C.ACTION_2_COST }} points</li>
+                <li>Action 1: Coût = {{ C.ACTION_1_COST }} point</li>
+                <li>Action 2: Coût = {{ C.ACTION_2_COST }} points</li>
             </ul>
-        </div>
-        {{ formfields }}
-        {{ next_button }}
+        </p
+        <form method="post">
+            {{ formfield 'action_chosen' }}
+            {{ next_button }}
+        </form>
     </div>
 </div>
-{{ endblock }}
+{% endblock %}
 
             
    
