--- a/credencegoodsBJS/RoundResults.html
+++ b/credencegoodsBJS/RoundResults.html
@@ -30,7 +30,7 @@ Tour {{ player.round_number }}: Résultats
                 </p>
                 {% endif %}
                 <p class="card-text">
-                    <strong>Votre profit pour ce tour : {{ payoff }} points</strong>
+                    <strong>Votre profit pour ce tour : {{ payoff }}</strong>
                 </p>
             {% else %}
                 <p class="card-text">
@@ -55,7 +55,7 @@ Tour {{ player.round_number }}: Résultats
                 </p>
                 {% endif %}
                 <p class="card-text">
-                    <strong>Votre profit pour ce tour : {{ payoff }} points</strong>
+                    <strong>Votre profit pour ce tour : {{ payoff }}</strong>
                 </p>
             {% else %}
                 <p class="card-text">
