Modified wording, demographics app and treatment_exo added

--- a/credencegoodsBJS_Exo/FinalResults.html
+++ b/credencegoodsBJS_Exo/FinalResults.html
@@ -53,7 +53,7 @@ Résultats finaux
             </tfoot>
         </table>
         <p class="mt-4">
-            Merci de cliquer sur <strong>Suivant</strong> pour répondre au questionnaire socio-démographique.
+            Merci de cliquer sur <strong>Continuer</strong> pour répondre au questionnaire socio-démographique.
         </p>
         {{ next_button }}
     </div>
