Restricted choice in baseline (3 price vectors), and treatment

--- a/credencegoodsBJS/PriceOffer.html
+++ b/credencegoodsBJS/PriceOffer.html
@@ -7,13 +7,11 @@ Tour {{ player.round_number }}: Offre de prix
     <div class="card-body">
         <h4 class="card-title">Définissez des prix</h4>
         <p class="card-text">
-            Vous êtes un Joueur A. Veuillez définir deux prix à offrir au Joueur B.
+            Vous êtes le Joueur A. Veuillez choisir la paire de prix que vous proposerez au Joueur B.
         </p>
-        <p class="card-text">
-            Les deux prix doivent être des nombres entiers compris entre {{ C.MIN_PRICE }} et {{ C.MAX_PRICE }} points.
-            Le Prix 1 doit être plus petit ou égal au Prix 2.
-        </p>
-        {{ formfields }}
+        <div class="mb-3">
+            {{ form.price_choice }}
+        </div>
         {{ next_button }}
     </div>
 </div>
