--- a/credencegoodsBJS_Exo/ActionChoice.html
+++ b/credencegoodsBJS_Exo/ActionChoice.html
@@ -10,25 +10,27 @@
             <strong>Le joueur B est du Type {{ player_b_type }}</strong>.
         </p>
         <div class="alert alert-info">
-            <strong>Infromation sur les revenues :</strong>
-            <ul>
-                <li>Si le Joueur B est de Type 1 et que vous choisissez l'Action 1: Revenu = {{ C.REVENUE_1 }} points</li>
-                <li>Si le Joueur B est de Type 1 et que vous choisissez l'Action 2: Revenu =  {{ C.REVENUE_2 }} points</li>
-                <li>Si le Joueur B est de Type 2 et que vous choisissez l'Action 1 ou l'Action 2: Revenu =  {{ C.REVENUE_2 }} points</li>
+            <p class="mb-2"><strong>Informations sur les revenus :</strong></p>
+            <ul class="mb-3">
+                <li>Si le Joueur B est de Type 1 et que vous choisissez l'Action 1, votre revenu est de {{ C.REVENUE_1 }} points.</li>
+                <li>Si le Joueur B est de Type 1 et que vous choisissez l'Action 2, votre revenu est de {{ C.REVENUE_2 }} points.</li>
+                <li>Si le Joueur B est de Type 2 et que vous choisissez l'Action 1 ou l'Action 2, votre revenu est de {{ C.REVENUE_2 }} points.</li>
             </ul>
-            <strong>Coût des actions :</strong>
-            <ul>
-                <li>Action 1: Coût = {{ C.ACTION_1_COST }} point</li>
-                <li>Action 2: Coût = {{ C.ACTION_2_COST }} points</li>
+            <p class="mb-2"><strong>Coût des actions :</strong></p>
+            <ul class="mb-0">
+                <li>Action 1 : coût de {{ C.ACTION_1_COST }} point.</li>
+                <li>Action 2 : coût de {{ C.ACTION_2_COST }} points.</li>
             </ul>
-        </p
-        <form method="post">
-            {{ formfield 'action_chosen' }}
-            {{ next_button }}
-        </form>
+            <p class="mb-2"><strong>Paiement au Joueur B :</strong></p>
+            <ul class="mb-3">
+                <li>Si le Joueur B est de Type 1, le paiement est le Prix 1 ({{ price1_offer }} points).</li>
+                <li>Si le Joueur B est de Type 2, le paiement est le Prix 2 ({{ price2_offer }} points).</li>
+            </ul>
+        </div>
+        {{ formfield 'action_chosen' }}
+        {{ next_button }}
     </div>
 </div>
 {% endblock %}
 
-            
-   
+
