--- a/credencegoodsBJS_Exo/FinalResults.html
+++ b/credencegoodsBJS_Exo/FinalResults.html
@@ -15,17 +15,17 @@ Résultats finaux
                 <strong>Total de points gagnés : {{ total_payoff }}</strong>
             </p>
             <p>
-                <strong>Gain variable converti : {{ total_euros_rounded }} €</strong>
+                <strong>Total en Euros : {{ total_euros_rounded }} €</strong>
             </p>
             <p>
-                <strong>Indemnité de participation : {{ participation_fee_rounded }} €</strong>
+                <strong> Indemnisation de présence: {{ participation_fee_rounded }} €</strong>
             </p>
             <hr>
             <p>
-                <strong>Paiement total (variable + indemnité) : {{ total_payment_rounded }} €</strong>
+                <strong>Paiement total: {{ total_payment_rounded }} €</strong>
             </p>
             <p class="text-muted">
-                Taux de change : 1 point = 25 centimes d'euro (4 points = 1 Euro)
+                Taux de change : 7 points = 1 euro (1 point ≈ 0,14 €)
             </p>
         </div>
         
@@ -53,7 +53,7 @@ Résultats finaux
             </tfoot>
         </table>
         <p class="mt-4">
-            Merci de cliquer sur <strong>Continuer</strong> pour répondre au questionnaire socio-démographique.
+            Merci de cliquer sur <strong>Suivant</strong> pour répondre au questionnaire socio-démographique.
         </p>
         {{ next_button }}
     </div>
