--- a/credencegoodsBJS_Exo/RoundResults.html
+++ b/credencegoodsBJS_Exo/RoundResults.html
@@ -30,11 +30,11 @@ Tour {{ player.round_number }}: Résultats
                 </p>
                 {% endif %}
                 <p class="card-text">
-                    <strong>Votre profit pour ce tour : {{ payoff }}</strong>
+                    <strong>Votre gain pour ce tour : {{ payoff }}</strong>
                 </p>
             {% else %}
                 <p class="card-text">
-                    <strong>Votre profit pour ce tour : {{ outside_option }} point</strong> (option de sortie)
+                    <strong>Votre gain pour ce tour : {{ outside_option }} point</strong> (option de sortie)
                 </p>
             {% endif %}
         {% else %}
@@ -55,11 +55,11 @@ Tour {{ player.round_number }}: Résultats
                 </p>
                 {% endif %}
                 <p class="card-text">
-                    <strong>Votre profit pour ce tour : {{ payoff }}</strong>
+                    <strong>Votre gain pour ce tour : {{ payoff }}</strong>
                 </p>
             {% else %}
                 <p class="card-text">
-                    <strong>Votre profit pour ce tour : {{ outside_option }} point</strong> (option de sortie)
+                    <strong>Votre gain pour ce tour : {{ outside_option }} point</strong> (option de sortie)
                 </p>
             {% endif %}
         {% endif %}
