--- a/credencegoodsBJS_Exo/Welcome.html
+++ b/credencegoodsBJS_Exo/Welcome.html
@@ -7,7 +7,7 @@ Bienvenue
     <div class="card-body">
         <h4 class="card-title">Bienvenue dans cette expérimentation!</h4>
         <p class="card-text">
-            Merci de lire attentivement les instructions et de cliquer sur "Next" quand vous serez prêt à commencer.
+            Merci de lire attentivement les instructions et de cliquer sur « Suivant » quand vous serez prêt à commencer.
         </p>
         {{ next_button }}
     </div>
